<!-- The preference Settings screen used in Sunshine; inflated in setupSimplePreferencesScreen
     in SettingsActivity (Also referenced in the boilerplate code from the Android documentation
     website in the GeneralPreferenceFragment in SettingsActivity, which is not used in Sunshine. -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!-- :key attribute for key/value access -->
    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label"
        android:entries="@array/pref_units_entries"
        android:entryValues="@array/pref_units_values"
        android:defaultValue="@string/pref_units_default"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <CheckBoxPreference
        android:key="@string/pref_notifications_key"
        android:title="@string/pref_notifications_label"
        android:defaultValue="@bool/pref_notifications_default"
        android:summaryOn="@string/pref_notifications_on"
        android:summaryOff="@string/pref_notifications_off"/>
    -->


</PreferenceScreen>
